--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/progress": "^0.2.7",
         "@vitejs/plugin-react": "^3.0.0",
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.20",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "tailwindcss": "^3.2.4",
         "vite": "^4.0.0"
     }
 }
