--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@headlessui/react": "^1.7.7",
+        "@heroicons/react": "^2.0.13",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/progress": "^0.2.7",
